--- a/styles/main.css
+++ b/styles/main.css
@@ -8,6 +8,10 @@ figure {
 	background-color: orange;
 	float: right;
 	border: 1px solid black;
-	margin-left: 10px;
-	margin-bottom: 10px;
+	margin: 15px;
+	padding: 10px;
+}
+
+figcaption {
+	margin-top: 10px;
 }
