--- a/styles/main.css
+++ b/styles/main.css
@@ -1,15 +1,23 @@
-.container {
+body {
 	width: 960px;
 	margin: 0 auto;
 }
+/*
+.container {
+	float: right;
+	border: 1px solid black;
+	padding: 10px;
+	margin: 15px;
+}
+*/
 figure {
 	height: 150px;
 	width: 150px;
 	background-color: orange;
-	float: right;
 	border: 1px solid black;
 	margin: 15px;
-	padding: 10px;
+	padding: 10px 10px 30px 10px;
+	float: right;
 }
 
 figcaption {
