--- a/styles/main.css
+++ b/styles/main.css
@@ -8,6 +8,7 @@ figure {
 	background-color: orange;
 	border: 1px solid black;
 	margin-left: 15px;
+	margin-bottom: 15px;
 	padding: 10px;
 	float: right;
 }
