--- a/styles/main.css
+++ b/styles/main.css
@@ -4,15 +4,13 @@
 	margin: 0 auto;
 }
 
-figure {
-	background-color: orange;
-	border: 1px solid black;
-	margin-left: 15px;
-	margin-bottom: 15px;
-	padding: 10px;
+.images img {
 	float: right;
+	display: block;
+	clear: both;
+	padding-top: 10px;
 }
 
-figcaption {
-	margin-top: 10px;
+.container p {
+	padding-top: 10px;
 }
