--- a/styles/main.css
+++ b/styles/main.css
@@ -2,3 +2,19 @@
 	width: 960px;
 	margin: 0 auto;
 }
+
+.container p {
+	padding: 10px 0px;
+}
+.container nav {
+	text-align: center;
+}
+.container nav a{
+	text-decoration: none;
+	background-color: aqua;
+	padding: 0.25em 20px
+}
+
+.container nav a:hover {
+	background-color: yellow;
+}
