--- a/styles/main.css
+++ b/styles/main.css
@@ -3,29 +3,8 @@
 	margin: 0 auto;
 }
 
-.container h1 {
-	float: left;
-}
-
-.container h1:after {
-	content: "";
-	margin: 0 0.75em;
-}
-
-.container .author {
-	float: left;
-}
-
-.container .author:after {
-	content: "";
-	margin: 0 0.75em;
-}
-
-.container time {
-	float: left;
-}
 .container p {
-	padding: 10px 0px;
+	margin: 10px 0px;
 	clear: both;
 }
 
