--- a/styles/main.css
+++ b/styles/main.css
@@ -36,4 +36,19 @@
 .container .after:after {
 	content: ">>";
 	margin-left: 10px
-}	
+}
+
+/* Personal CSS END */
+.clearfix { display: inline-block; }
+.clearfix:after {
+	visibility: hidden;
+	display: block;
+	font-size: 0;
+	content: " ";
+	clear: both;
+	height: 0;
+}
+/* start commented backslash hack \*/
+* html .clearfix { height: 1%; }
+.clearfix { display: block; }
+/* close commented backslash hack */
