--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,14 @@
 .container {
 	width: 960px;
 	margin: 0 auto;
+	font-family: Arial;
+}
+
+.container span {
+	float: left;
+	width: 35px;
+	font-size: 55px;
+	line-height: 48px;
 }
 
 /* Personal CSS END */
