--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,37 @@
+header {
+	background-color: gray;
+	position: relative;
+}
 
+header .header-content {
+	position: relative;
+	width: 960px;
+	margin: 0 auto;
+	text-align: right;
+}
+
+header .header-content h1 {
+	float: left;
+	font-size: 30px;
+}
+
+header .header-content nav {
+}
+
+header .header-content nav a {
+	color: white;
+	text-decoration: none;
+}
+
+main {
+	width: 960px;
+	margin: 0 auto;
+	clear: both;
+}
+
+footer {
+	background-color: gray;
+}
 
 /* Personal CSS END */
 .clearfix { display: inline-block; }
