--- a/styles/main.css
+++ b/styles/main.css
@@ -22,7 +22,6 @@ header .content nav a  {
 	clear: both;
 }
 
-
 .content main {
 	width: 830px;
 	float: right;
@@ -30,6 +29,9 @@ header .content nav a  {
 	padding: 15px 0 15px 15px;
 }
 
+.content main article p {
+	margin-top: 10px;
+}
 .content aside {
 	width: 100px;
 	padding: 15px 0;
